--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
+*{
+  font-family: 'Russo One', sans-serif;
+}
+body{
+   background-color: grey;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+#drum-machine {
+    width: 60vw;
+    margin: 2rem auto;
+	padding: 2rem;
+    display: flex;
+  	background-color: gainsboro;
+    border: orange solid 6px;
+	justify-content: space-evenly;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#pad-board {
+  width: 50%;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  gap: 10px;
+  margin: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.drum-pad {
+  cursor: pointer;
+  background-color: grey;
+  border-radius: 5px;
+  display:flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: 3px 3px 5px black;
+}
+.drum-pad:active {
+  background-color: orange
 }
 
-.App-link {
-  color: #61dafb;
+#controls {
+	padding: 1rem;
+    width: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+  	justify-content: center;
+	
+} 
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 54px;
+  height: 25px;
+  background-color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 4px;
+  background-color: blue;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: black;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.sound-title {
+    width: 200px;
+	height: 50px;
+    display:flex;
+	background-color: gray;
+    align-items: center;
+  	justify-content: center;
+}
+
+input[type=range]{
+  width: 250px;
+  -webkit-appearance: none;     
+  padding: 0;                   
+  font: inherit;               
+  color: black;                 
+  background: linear-gradient(black, gray, black);
+  box-shadow: 3px 3px 5px black;
+  height: 6px;
+  transition: opacity .2s;
+  cursor: pointer;
+}
+
+.power-label, .bank-label{
+	margin-bottom: 0;
+	text-align:center;
+	
+}
+
